Fix: Resolve project compilation issues
Updated Java version to 1.8 in pom.xml to support modern language features. Replaced deprecated BASE64Decoder with java.util.Base64 for compatibility with newer JDKs. Added JAXB dependencies to pom.xml to resolve issues with its removal in JDK 9+.